# clustrX

./: .gitignore  README.md  debug_clustrx.py  pyproject.toml  run_tests.sh
.github/workflows/: publish.yml
clustrx/: cli.py  clustrx.py
examples/: all_seqs.fasta  hits.txt  todas_seqs.fasta
examples/output_final/fasta_files/: cluster_1.fasta  cluster_2.fasta
tests/: test_clustrx_logic.py  test_custom_format.py  test_filtering.py  test_hmmer_format.py  test_integration.py  test_scientific_rigor.py  test_validation.py
tests/data/: sample.fasta  sample_blast.out  sample_hmmer.domtblout  sample_hmmer.tblout  scientific.domtblout  scientific.fasta
tests/results/out_blast/clusters/: cluster_1.txt
tests/results/out_blast_hmmer/clusters/: cluster_1.txt
tests/results/out_custom/fasta_files/: cluster_1.fasta
tests/results/out_hmmer/fasta_files/: cluster_2.fasta
