[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clustrX"
version = "0.1.9"
description = "clustrX: Highly Robust and Sensitive Protein Clustering Using Similarity Networks and Leiden Community Detection"
authors = [{ name = "Mario Benítez-Prián", email = "mario.benitezprian@gmail.com"}]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["bioinformatics", "clustering", "blast", "hmmer", "sequences", "graphs", "protein-families", "similarity-search", "sequence-clustering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "polars>=0.19.0",
    "igraph>=0.10.0",
    "numpy>=1.20.0",
    "psutil>=5.8.0",
]

[tool.setuptools]
license-files = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/mario-benitez-prian/clustrX"
Repository = "https://github.com/mario-benitez-prian/clustrX"
"Bug Tracker" = "https://github.com/mario-benitez-prian/clustrX/issues"

[project.scripts]
clustrx = "clustrx.cli:main"

[tool.setuptools.packages.find]
include = ["clustrx"]